fix smooth scrolling not showing headers

--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -9,6 +9,7 @@
 html {
   font-size: 100%;
   scroll-behavior: smooth;
+  scroll-padding: var(--header-height);
 }
 
 body {
